feat: more buildout
Signed-off-by: claughinghouse <claughinghouse@users.noreply.github.com>

--- a/ansible/kubernetes/inventory/group_vars/all/k3s.sops.yml
+++ b/ansible/kubernetes/inventory/group_vars/all/k3s.sops.yml
@@ -1,7 +1,8 @@
 kind: Secret
+SECRET_S3_ACCESS_KEY: ENC[AES256_GCM,data:UpOkFOVGunF1assPBPbK/duGisn2Us1D2w==,iv:fDixyoCNZ4H9oq05aGUXzUbKUDNWwUIPGCzvRieMHwA=,tag:rErWTQn/5e+xgbm0s2Ba5Q==,type:str]
+SECRET_S3_SECRET_KEY: ENC[AES256_GCM,data:3oophmp6ep5gH9yjSsaSbQNvkQWM1hcDca4BcG3XZA==,iv:HfzOx7eRoVia8xPpWJxYM0XMFYvqAZEZl6x0DL5kLk8=,tag:o4Km+aJf4VWbmUF0mzfn0g==,type:str]
 SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:rfZeOCEdhf9UQvXFfIKSTUw=,iv:rdBoXxNwEO761PxoDWQ4CvURYrxMBsf8wGmoJ51Hilg=,tag:maXxZ3twgKd43/QvPLi4Jw==,type:str]
-SECRET_MINIO_ACCESS_KEY: null
-SECRET_MINIO_SECRET_KEY: null
+SECRET_S3_DOMAIN: ENC[AES256_GCM,data:/AZIcSZukTzVzF5YPF9TXtzn22AfSre2Q5c7rPyf,iv:WLt/hJML5jIyTH4kjJodZkn7CcH05ZTYCrlnNXWQjgI=,tag:6ZRuIyT5JFA6ZL+vb6I3HA==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -20,8 +21,8 @@ sops:
             NW1lZVh0VlNnWkdEbGNBaFYvQW84ZE0K+bQ0p+RbzYYme5XZJdptoCBKGqmRRtOf
             kkTAFawucd3EhTMAAmk7gp+4ew5Exhv48KvZrv9yjGNIgDlMMI291A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-20T18:18:20Z"
-    mac: ENC[AES256_GCM,data:+KQ5E5otpDE7sox8oUyHkeXWeJpDZDEn+NUu40FcJf1QAfM24yYXssI8pYSF5/ClD3U7z1A6eF3r9uFrJAkkJ5fIwPqx658j/fpSNiUcR51p+OnsLas/HkjWguL/hFIgBC2VD9oUaUcEcjZr4dvbtf8gY1mk8KHA6ZxBtQ7+fhk=,iv:7yQ5En3DLgZhJ1/99FvNVUAHPhHHEDiHaddmcmsIUqw=,tag:6RhuPe7CQ8LR7vz7QUCi1g==,type:str]
+    lastmodified: "2022-03-20T18:38:46Z"
+    mac: ENC[AES256_GCM,data:JuJjzVn4QTkwkvjLca8CErYfGV6h8ltPLA/b7HTsjNMpAhXiYs08wkMVme3MR8LhT3KDWOCxwiDP0xBoQ0SRTaCqUl7dAvKfWLJwnTxQoUT5AemqTV9+JGMkI5Ybq2K7O2/usDfu3z1jlWE3v1XKjnRUq8sLMPZSwN+OCn535EA=,iv:ltJ2saI+1J8hq5cvMgBhyuzgEqeqjVGCyZghftKMcf4=,tag:sfeed7lVMkD5FNc2+1rBJQ==,type:str]
     pgp:
         - created_at: "2022-03-20T18:18:19Z"
           enc: |
