--- a/ansible/kubernetes/inventory/group_vars/master/k3s.yml
+++ b/ansible/kubernetes/inventory/group_vars/master/k3s.yml
@@ -10,9 +10,9 @@ k3s_server:
   node-ip: "{{ ansible_host }}"
   tls-san:
     # # kube-vip
-    # - "{{ kubevip_address }}"
+    - "{{ kubevip_address }}"
     # haproxy
-    - "{{ k3s_registration_address }}"
+    # - "{{ k3s_registration_address }}"
   docker: false
   flannel-backend: "none" # This needs to be in quotes
   disable:
