--- a/ansible/kubernetes/roles/k3s.kubernetes/vars/main/etcd-snapshots.yml
+++ b/ansible/kubernetes/roles/k3s.kubernetes/vars/main/etcd-snapshots.yml
@@ -2,7 +2,7 @@
 # -- enable exporting etcd backups to s3
 k3s_etcd_s3: "true"
 # -- snapshot bucket name
-k3s_etcd_s3_bucket: k3s
+k3s_etcd_s3_bucket: k8s-etcd
 # -- snapshot schedule
 k3s_etcd_snapshot_schedule_cron: "0 */6 * * *"
 # -- snapshot retention
