feat: more build and cleanup

--- a/ansible/kubernetes/roles/os.kubernetes/vars/main.yml
+++ b/ansible/kubernetes/roles/os.kubernetes/vars/main.yml
@@ -17,6 +17,7 @@ os_packages_install:
   - psmisc
   - software-properties-common
   - unzip
+  - qemu-guest-agent
 os_packages_remove:
   - apparmor
   - apport
