--- a/ansible/router/roles/os.router/tasks/packages.yml
+++ b/ansible/router/roles/os.router/tasks/packages.yml
@@ -26,7 +26,7 @@
       - security/cyrus-sasl2
       - security/cyrus-sasl2-gssapi
       - sysutils/htop
-      - sysutils/neofetch
+      # - sysutils/neofetch
       - sysutils/screen
       - sysutils/tmux
       - sysutils/viddy
