--- a/cluster/core/rook-ceph/cluster/secret.sops.yaml
+++ b/cluster/core/rook-ceph/cluster/secret.sops.yaml
@@ -5,9 +5,54 @@ metadata:
     namespace: rook-ceph
 stringData:
     admin-secret: ENC[AES256_GCM,data:l4o9JmRe8jQU5AvALqypWnuQeuoeare0TgX/aPeVzDBZIiKarV492Q==,iv:QVmNsO9jASoUdw/3W51WsRtuCQkw/CFRmCgzF0f3Xy0=,tag:dm9VssAjmnNQCZLbqOznOw==,type:str]
+    ceph-secret: ENC[AES256_GCM,data:8N3+dN+CtDV6ahVNbLlOO9u4mdOasOZy+YXXveir2DembW9mhvbfTw==,iv:XUYygeZZAqq1KSTAhTlrm42kORR4RV2LcncRTgWIt/A=,tag:xU4jTIGb+wgcqzubf4hKrA==,type:str]
+    ceph-username: ENC[AES256_GCM,data:9LD/7ss6zTT7w4aD,iv:8aYFzvAME1ODKCol75MvOHM0f1rDp/dnQu9Yv3+rq+s=,tag:6kMDYIENJIi35pG0r7Tv2Q==,type:str]
     cluster-name: ENC[AES256_GCM,data:/jN/GA==,iv:AClZXlDw9c2f2Dpk5Vj3mWuJ7QZefzQEy7uLEAPTTsk=,tag:UR7eSLiznDpYEYqI9qejjA==,type:str]
     fsid: ENC[AES256_GCM,data:VzwLg5lm7DfnrzGkiM94OMMqi/hpTGGzHqFR3KP3F0C+WXlf,iv:L7OzAbq9TxczjLcrUUxuUYdLimAg05qXA2Jx7JAeAC4=,tag:1QmpVU/280WQPS/XED7kOA==,type:str]
     mon-secret: ENC[AES256_GCM,data:XeIscJLH6pmwpzERYIJ9B2KwVxsK4bKXLmF7R0MQdEG28kjbURoC0w==,iv:eAFRQ0ssaCLQkCRvxg5yLRTNhKm5VwZG1JxKIhbTT74=,tag:2jF9OdNwksei5eUPd1BD9g==,type:str]
+    type: ENC[AES256_GCM,data:XeDyyE2B+IXSV0K/Seq+g2ZM,iv:5+lKcA1qU/rlrb+BD2rmYPSDBc36kmigciPjdV6WE6k=,tag:qWT2qJUzEucE9kbEKvmxtw==,type:str]
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2021-09-20T19:36:06Z"
+          enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2022-03-22T02:14:29Z"
+    mac: ENC[AES256_GCM,data:jw5NVEudzfVRU9cnouSKIBA+qLbUMyolgaXwOJEos7hmq07yHfnUz3S/40ticdsbMEuseCWRZ34XtvEaRW+TSLvO7DRUqCnz65MGDPFyGBGMqAlhBVKKd8qIss7tLy4HEvBacIegh2ekUysTbOPpe2kIbNaLevy3WveVJeZ3TUY=,iv:mC9AyuqE9Tc56MtjZb66R0V02rhbVgjguSpsBXddNK4=,tag:zSJG40bheOdVxk/R6Fe1zg==,type:str]
+    pgp:
+        - created_at: "2021-09-20T19:36:06Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+            hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+            Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+            SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+            K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+            QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+            gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+            bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+            AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+            3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+            JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+            hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+            XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+            RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+            =O7sO
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.2
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: rook-csi-rbd-provisioner
+    namespace: rook-ceph
+stringData:
+    userID: ENC[AES256_GCM,data:x7tK0kIyFLubVANdeS/r3RitDnOgGODfK8s=,iv:CB4qF0TC2OlrV5inToScCWAZK382XHXqn0XKgjvJ6hk=,tag:PesVzLzcFpW1alkFf7N0SA==,type:str]
+    userKey: ENC[AES256_GCM,data:OazB3KpOWNgP9FVa/l8rskgU11/LDw7xARBaf4y0BQPVah/cgjDQbw==,iv:mWMhPHRiRXpVItl+5p0/YHenXhrp281mDXAzU+6g0ic=,tag:PpphdqX2yeNV4pzSYD/e7Q==,type:str]
 type: kubernetes.io/rook
 sops:
     kms: []
@@ -18,8 +63,147 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-03-21T23:28:32Z"
-    mac: ENC[AES256_GCM,data:z+jiePdK9c3UW/o/ZlU9ysaaxH4GznqtHuR2d6M7QUSMfFopvXfZw+J7ztGFtN1JryuJFKE2I9EqOP6QAVh9X+Fta67FwXknI/eyS+IheFZesafj57syHDpfNEOr++fFreVJpdXixkyg/3PyhoaejefKyCLAfhq1swSwPGqa/rk=,iv:J84WRQVwMesxyyWH5WFg1idXlUT0u9PtqeNUYzUj1gc=,tag:ZecCRHAgLqxhkMtD/cLusA==,type:str]
+    lastmodified: "2022-03-22T02:14:29Z"
+    mac: ENC[AES256_GCM,data:jw5NVEudzfVRU9cnouSKIBA+qLbUMyolgaXwOJEos7hmq07yHfnUz3S/40ticdsbMEuseCWRZ34XtvEaRW+TSLvO7DRUqCnz65MGDPFyGBGMqAlhBVKKd8qIss7tLy4HEvBacIegh2ekUysTbOPpe2kIbNaLevy3WveVJeZ3TUY=,iv:mC9AyuqE9Tc56MtjZb66R0V02rhbVgjguSpsBXddNK4=,tag:zSJG40bheOdVxk/R6Fe1zg==,type:str]
+    pgp:
+        - created_at: "2021-09-20T19:36:06Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+            hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+            Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+            SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+            K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+            QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+            gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+            bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+            AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+            3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+            JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+            hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+            XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+            RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+            =O7sO
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.2
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: rook-csi-rbd-node
+    namespace: rook-ceph
+stringData:
+    userID: ENC[AES256_GCM,data:tFxmQRlId+mBlpgO7TsFnraGog==,iv:mq1PwFzwyOKKm11wtfM1eG/x4Zdr68LNDGOrcrD+LAM=,tag:oFAwMQq6Xu0bdAsXdYdUTw==,type:str]
+    userKey: ENC[AES256_GCM,data:5Wv170RHjxyK6BLNA6CkBV8WrJ/BqeJ73Hq7lWFFvJ877mijHb8Oxg==,iv:iHIVXyepe6ire2KCcntVITwOFiD5CCV0fWmag75X/Pc=,tag:Pdk97iUkruL64zibn2BJ0A==,type:str]
+type: kubernetes.io/rook
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2021-09-20T19:36:06Z"
+          enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2022-03-22T02:14:29Z"
+    mac: ENC[AES256_GCM,data:jw5NVEudzfVRU9cnouSKIBA+qLbUMyolgaXwOJEos7hmq07yHfnUz3S/40ticdsbMEuseCWRZ34XtvEaRW+TSLvO7DRUqCnz65MGDPFyGBGMqAlhBVKKd8qIss7tLy4HEvBacIegh2ekUysTbOPpe2kIbNaLevy3WveVJeZ3TUY=,iv:mC9AyuqE9Tc56MtjZb66R0V02rhbVgjguSpsBXddNK4=,tag:zSJG40bheOdVxk/R6Fe1zg==,type:str]
+    pgp:
+        - created_at: "2021-09-20T19:36:06Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+            hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+            Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+            SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+            K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+            QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+            gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+            bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+            AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+            3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+            JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+            hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+            XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+            RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+            =O7sO
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.2
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: rook-csi-cephfs-provisioner
+    namespace: rook-ceph
+stringData:
+    adminID: ENC[AES256_GCM,data:8i7jhUnsNput38Bvfl/gP8f/NTePFR7pqDw9PXc=,iv:aVVYQKo+M+kFmNJzNJK2ep9R9Gdir6W989KlsFFo8Ww=,tag:YtfIcx/Xz2ABZdym/z401w==,type:str]
+    adminKey: ENC[AES256_GCM,data:dWMSP5MzNkBazwjRtuU+VAJ7eNeZqBafgn6ONFxWBom/G7a9CCKV3g==,iv:kM+m53sjEuxsisuMKLfz/TK8cMm1oPDZUQjnJMYXqZg=,tag:2M2Hn6YGACR8pQatsFUQiQ==,type:str]
+type: kubernetes.io/rook
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2021-09-20T19:36:06Z"
+          enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2022-03-22T02:14:29Z"
+    mac: ENC[AES256_GCM,data:jw5NVEudzfVRU9cnouSKIBA+qLbUMyolgaXwOJEos7hmq07yHfnUz3S/40ticdsbMEuseCWRZ34XtvEaRW+TSLvO7DRUqCnz65MGDPFyGBGMqAlhBVKKd8qIss7tLy4HEvBacIegh2ekUysTbOPpe2kIbNaLevy3WveVJeZ3TUY=,iv:mC9AyuqE9Tc56MtjZb66R0V02rhbVgjguSpsBXddNK4=,tag:zSJG40bheOdVxk/R6Fe1zg==,type:str]
+    pgp:
+        - created_at: "2021-09-20T19:36:06Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+            hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+            Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+            SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+            K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+            QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+            gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+            bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+            AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+            3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+            JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+            hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+            XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+            RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+            =O7sO
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.2
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: rook-csi-cephfs-node
+    namespace: rook-ceph
+stringData:
+    adminID: ENC[AES256_GCM,data:CIOW1mEC3J6JPSkOsdmSxt9fQFkmYw==,iv:zKa6sTmtI4vFJ6e/PLAjEBJaI1h1E6dT2eBm6ZojFhQ=,tag:WtCYcwVPnBMPGG+2n4qY1Q==,type:str]
+    adminKey: ENC[AES256_GCM,data:C2GpmOfW9BSKbdl/c1ZB6HVNhcdx8EC9vzuZQw3tijm6VMTtTQm3MA==,iv:60zlR5UBkw2TRU1RK00qk71Hmq4Xnri7ANcL7INGSJE=,tag:EI92OKbYJRZJdop9l9S7Xg==,type:str]
+type: kubernetes.io/rook
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: rgw-admin-ops-user
+#   namespace: rook-ceph
+# stringData:
+#   accessKey:
+#   secretKey:
+# type: kubernetes.io/rook
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2021-09-20T19:36:06Z"
+          enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2022-03-22T02:14:29Z"
+    mac: ENC[AES256_GCM,data:jw5NVEudzfVRU9cnouSKIBA+qLbUMyolgaXwOJEos7hmq07yHfnUz3S/40ticdsbMEuseCWRZ34XtvEaRW+TSLvO7DRUqCnz65MGDPFyGBGMqAlhBVKKd8qIss7tLy4HEvBacIegh2ekUysTbOPpe2kIbNaLevy3WveVJeZ3TUY=,iv:mC9AyuqE9Tc56MtjZb66R0V02rhbVgjguSpsBXddNK4=,tag:zSJG40bheOdVxk/R6Fe1zg==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
